security context empty

--- a/values.yaml
+++ b/values.yaml
@@ -41,10 +41,7 @@ serviceAccount:
 
 podAnnotations: {}
 
-securityContext:
-    runAsUser: 1000
-    runAsGroup: 1000
-#    fsGroup: 1000
+securityContext: {}
 
 service:
   type: ClusterIP
