--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -206,7 +206,7 @@ spec:
 
                 
                 # java -jar  /phoebus/service-save-and-restore.jar -Delasticsearch.network.host={{ .Values.elasticsearch.network.host }} -Delasticsearch.http.port="{{ .Values.elasticsearch.http.port }}" -Dlogging.level.org.springframework=TRACE -Dlogging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
-                java -Djavax.net.ssl.trustStore=/saveandrestore/truststore.jks -Djavax.net.ssl.trustStorePassword=changeit -jar -Djca.use_env=true -Dspring.config.location=file:/config/saveandrestore.properties /saveandrestore/service-save-and-restore-*.jar
+                java -Djavax.net.ssl.trustStore=/saveandrestore/truststore.jks -Djavax.net.ssl.trustStorePassword=changeit -Dspring.config.location=file:/config/saveandrestore.properties -jar   /saveandrestore/service-save-and-restore-*.jar -Djca.use_env=true
               {{- end }}
               {{- if eq .Values.phoebusservice "alarmserver" }}
                 ## needs kafka
