--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -10,9 +10,11 @@ data:
     spring.main.banner-mode=off
     spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.elasticsearch.ElasticsearchRestClientAutoConfiguration
     logging.level.root=WARN
-    alarm_topics={{.Values.alarm.topics}}
+    alarm_topics={{.Values.alarm.topics | default "Accelerator,AcceleratorCommand,AcceleratorTalk"}}
+    topics={{.Values.alarm.topics | default "Accelerator,AcceleratorCommand,AcceleratorTalk"}}
     es_host={{.Values.elasticsearch.network.host}}
     es_port=9200
+    es_url={{.Values.elasticsearch.http.protocol | default "http"}}://{{.Values.elasticsearch.network.host}}:{{.Values.elasticsearch.http.port}}
     elasticsearch.network.host={{ .Values.elasticsearch.network.host }}
     elasticsearch.http.port={{ .Values.elasticsearch.http.port }}
     elasticsearch.http.protocol: {{ .Values.elasticsearch.protocol | default "http" }}
