--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -228,7 +228,7 @@ spec:
                 echo "Importing Elasticsearch certificate into truststore..."
                 keytool -import -noprompt -alias elasticsearch -file /cert/elasticsearch-ca.crt -keystore /alarmlogger/truststore.jks -storepass changeit
                 {{- end}}
-                settings="/alarmlogger/service-alarm-logger-*.jar  -noshell -bootstrap.servers {{.Values.kafka.host}}:{{.Values.kafka.port}} -es_host {{ .Values.elasticsearch.network.host }} -es_port {{ .Values.elasticsearch.http.port }} -topics {{.Values.alarm.topics}}"
+                settings="/alarmlogger/service-alarm-logger-*.jar  -noshell"
                 
                 echo "starting java -jar $settings"
                 java -Dspring.config.location=file:/config/alarmlogger.properties -Djavax.net.ssl.trustStore=/alarmlogger/truststore.jks -Djavax.net.ssl.trustStorePassword=changeit -jar $settings
