dont recreate certificate if exists

--- a/templates/tls-secret.yaml
+++ b/templates/tls-secret.yaml
@@ -1,5 +1,22 @@
 {{- if and .Values.ingress .Values.ingress.enabled .Values.secure (not .Values.ingress.tls) }}
 {{- $fullName := include "phoebus-services-chart.fullname" . -}}
+{{- $secretName := printf "%s-tls" $fullName }}
+{{- $existingSecret := lookup "v1" "Secret" .Release.Namespace $secretName }}
+{{- if $existingSecret }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ $secretName }}
+  labels:
+    {{- include "phoebus-services-chart.labels" . | nindent 4 }}
+  annotations:
+    helm.sh/resource-policy: keep
+type: kubernetes.io/tls
+data:
+  tls.crt: {{ index $existingSecret.data "tls.crt" }}
+  tls.key: {{ index $existingSecret.data "tls.key" }}
+{{- else }}
 {{- $ca := genCA "phoebus-ca" 365 }}
 {{- $hosts := list }}
 {{- range .Values.ingress.hosts }}
@@ -10,11 +27,14 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ $fullName }}-tls
+  name: {{ $secretName }}
   labels:
     {{- include "phoebus-services-chart.labels" . | nindent 4 }}
+  annotations:
+    helm.sh/resource-policy: keep
 type: kubernetes.io/tls
 data:
   tls.crt: {{ $cert.Cert | b64enc }}
   tls.key: {{ $cert.Key | b64enc }}
+{{- end }}
 {{- end }}
