Add comprehensive CORS configuration support
- Add cors.methods, cors.headers, cors.credentials, and cors.maxAge options
- Set sensible defaults for all CORS properties
- Document CORS configuration options in values.yaml
- Fixes CORS issues with multipart POST requests from web front-ends

--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -322,6 +322,10 @@ data:
       
     {{- if and .Values.cors .Values.cors.origins }}
       cors.allowed.origins={{.Values.cors.origins}}
+      cors.allowed.methods={{.Values.cors.methods | default "GET,POST,PUT,DELETE,OPTIONS,PATCH"}}
+      cors.allowed.headers={{.Values.cors.headers | default "*"}}
+      cors.allow.credentials={{.Values.cors.credentials | default "true"}}
+      cors.max.age={{.Values.cors.maxAge | default "3600"}}
     {{- end }}
     
       ################## File upload and request size limits ##################
