docs: Add CORS configuration documentation to values.yaml
Add comprehensive documentation for CORS configuration options:
- Detailed explanation of each CORS property
- Default values for optional properties
- Usage examples for origins and headers
- Clear guidance on when each setting is needed

Complements the CORS template support added in previous commit.
Helps users understand and configure CORS for web frontend access.

--- a/values.yaml
+++ b/values.yaml
@@ -175,6 +175,13 @@ ologBackup:
   username: "epics"
   password: "epics"
 
+# CORS configuration for Olog service
+# cors:
+#   origins: "https://example.com"
+#   methods: "GET,POST,PUT,DELETE,OPTIONS,PATCH"
+#   headers: "*"
+#   credentials: "true"
+#   maxAge: "3600"
 # CORS configuration for web front-end access
 # Configure these settings to allow cross-origin requests from web applications
 cors:
