fix(olog): copy default cacerts before adding ES cert to truststore
Previously the startup command created a new empty truststore with only
the Elasticsearch certificate. This caused Java's RestTemplate to fail
SSL handshakes with external services (e.g. OAuth2 IdP) because public
CA certificates were not present.

Now copies the JDK's default cacerts (which includes all public CAs)
before importing the ES certificate, so both internal ES and external
HTTPS connections work.

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -242,6 +242,8 @@ spec:
                 echo "* Starting olog server"
                 {{- if .Values.elasticsearch.pubcertsecret }}
                 echo "Importing Elasticsearch certificate into truststore..."
+                cp $JAVA_HOME/lib/security/cacerts /olog-target/truststore.jks
+                chmod 644 /olog-target/truststore.jks
                 keytool -import -noprompt -alias elasticsearch -file /cert/elasticsearch-ca.crt -keystore /olog-target/truststore.jks -storepass changeit
                 {{- end}}
                 cd /olog-target
